Fix scrollbar colour

--- a/frontend/styles/Editor.module.css
+++ b/frontend/styles/Editor.module.css
@@ -90,11 +90,11 @@
 }
 
 .dark {
-  background-color: "rgba(256, 256, 256, 0.2)";
+  background-color: rgba(256, 256, 256, 0.3);
   border-radius: "inherit";
 }
 
 .light {
-  background-color: "rgba(0, 0, 0, 0.2)";
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: "inherit";
 }
